#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package ImgAlgos
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-84
2015-04-24 Mikhail S. Dubrovin
- NDArrDropletFinder - add parameters mask and masked_value (PSAS-68)
	
Tag: V00-03-83
2015-04-14 Mikhail S. Dubrovin
- NDArrCalib - add method printMaskAndBkgd(), use m_is_done_once as member data in stead of static
	
Tag: V00-03-82
2015-03-20 Mikhail S. Dubrovin
- PixCoordsProducer - move calls of savePixCoordsInCalibStore(env) in checkCalibPars(...) (PSAS-11)
	
Tag: V00-03-81
2015-03-12 Mikhail S. Dubrovin
- add module EventCodeFilter (PSAS-122)

Tag: V00-03-80
2015-03-10 Mikhail S. Dubrovin
- ImgSaveInFile - constrain the number of messages about missing data
	
Tag: V00-03-79
2015-01-27 Mikhail S. Dubrovin
- NDArrAverage, GlobalMethods - re-factoring templated code.

Tag: V00-03-78
2015-01-27 Mikhail S. Dubrovin
- NDArrCalib - add parameter outtype to save calibrated ndarray in double(def), float, int, int16 (PSAS-95)
	
Tag: V00-03-77
2015-01-13 Mikhail S. Dubrovin
- NDArrDropletFinder - parameter value, control on print out etc. (PSAS-68)
- AlgSmearing - add parameter value for base intensity level
- AlgDroplet.h - add comments 
- add data/PlotNDArrayAndPeaks.py
- GlobalMethods.h - add parameter print_bits in the method saveNDArrayInFile
	
Tag: V00-03-76 
2015-01-09 Mikhail S. Dubrovin
- NDArrImageProducer - add parameters
	mode - for mapping algorithm of ndarray to 2-D image
	do_tilt - on/off tilt angle correction for sensors (PSAS-11)
- NDArrDropletFinder - add saving image and droplets/peaks in files for test purpose (PSAS-68)

DO NOT TAG BEFORE VACATION

2014-12-16 Mikhail S. Dubrovin
- In GlobalMethods.h add method saveNDArrayInEvent